--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,15 @@ a {
   margin-bottom: 1rem;
 }
 
+.header-subtitle {
+  color: black;
+  font-size: 2.5rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+}
+
 .header-contents {
   font-size: 1rem;
   color: black;
