--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ a {
 
 .header-title {
   color: black;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 700;
   letter-spacing: 1px;
   margin-top: -1rem;
@@ -61,7 +61,10 @@ a {
   padding: 0rem 0rem;
   border-radius: 0.5rem;
 }
-
+.header-item-bigger{
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
 .header-item a {
   color: #93c5fd;
   text-decoration: none;
@@ -214,6 +217,7 @@ a {
   display: flex;
   flex-direction: column;
   gap: 3rem;
+   align-items: center;
 }
 
 .project-card {
@@ -222,10 +226,11 @@ a {
   background: white;
   border-radius: 1rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-  overflow: ;
   transition: transform 0.3s ease;
   max-height: 500px;       /* Limit height */
   overflow-y: auto; 
+  width: 110%;
+  
 }
 
 .project-card:hover {
